# ParParGUI

./: .gitignore  CMakeLists.txt  README.md  clientinfo.cpp  clientinfo.h  config.h.in  createprogress.cpp  createprogress.h  createprogress.ui  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  optionsdialog.cpp  optionsdialog.h  optionsdialog.ui  outpreviewlistitem.cpp  outpreviewlistitem.h  par2calc.cpp  par2calc.h  par2outinfo.cpp  par2outinfo.h  parparclient.cpp  parparclient.h  parpargui_en_GB.ts  progressdialog.cpp  progressdialog.h  settings.cpp  settings.h  sizeedit.cpp  sizeedit.h  slicecountspinbox.cpp  slicecountspinbox.h  sourcefile.cpp  sourcefile.h  sourcefileframe.cpp  sourcefileframe.h  sourcefilelistitem.cpp  sourcefilelistitem.h  util.cpp  (+1 more)
.github/workflows/: Build Package.yml
res/: parpargui.rc
